syntax = "proto3";

package policy;

option go_package = "workaxle/policy/gen;policy";

service PolicyService {
  rpc ValidateLeave(ValidateLeaveRequest) returns (ValidateLeaveResponse);
  rpc RecordApproval(RecordApprovalRequest) returns (RecordApprovalResponse);
}

message ValidateLeaveRequest {
  int32  employee_id = 1;
  int32  team_id     = 2;
  string start_date  = 3; // "YYYY-MM-DD"
  string end_date    = 4; // "YYYY-MM-DD"
  int32  year        = 5;
}

message ValidateLeaveResponse {
  bool ok = 1;
}

message RecordApprovalRequest {
  int32  employee_id = 1;
  int32  team_id     = 2;
  string start_date  = 3;
  string end_date    = 4;
  int32  year        = 5;
  int32  days        = 6;
}

message RecordApprovalResponse {}
